[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
walkdir = "2"
ethers = { version = "2", features = ["abigen", "rustls"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
